--- a/styles.css
+++ b/styles.css
@@ -13,29 +13,20 @@ body {
 .parent {
     display: flex;
     justify-content: center;
-    align-items: center;
-    padding: 5rem;
+    margin: 10% auto;
+    width: 100%;
 }
-
-.one, .two {
-    flex-basis: 300px;
-    width: 160%;
-}
-
-@media screen and (max-width: 344px) {
-    .parent {
-        flex-direction: column;
-    }
-}
-
+    
 .one {
     background: linear-gradient(hsl(252, 100%, 67%), hsl(241, 81%, 54%));
     text-align: center; 
     border-radius: 15px;
+    width: 40%;
 }
 
 .two {
     background-color:  hsl(0, 0%, 100%);
+    width: 40%;
     border-top-right-radius: 15px;
     border-bottom-right-radius: 15px;
     border-top-left-radius: 7px;
@@ -172,4 +163,24 @@ a:hover {
     color: hsl(0, 7%, 62%);
 }
 
+/* media query  */
+@media screen and (max-width: 900px) {
+    .one, .two {
+        width: 40%;
+    }
+}
 
+@media screen and (max-width: 600px) {
+    .parent {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .one {
+        width: 95%;
+    }
+
+    .two {
+        width: 95%;
+    }
+}
